--- a/Eduke/eduke/main/templates/parents/parent_profile.html
+++ b/Eduke/eduke/main/templates/parents/parent_profile.html
@@ -122,7 +122,7 @@
                 <!-- Section 1: Parent Details -->
                 <div>
                   <h2 class="text-lg font-bold text-gray-700 mb-4">Update Your Details</h2>
-                  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div>
                       <label for="parent_name" class="block text-gray-700 font-medium mb-2">Name</label>
                       <input
@@ -131,6 +131,17 @@
                         name="parent_name"
                         value="{{ parent_name }}"
                         placeholder="Add Your Name"
+                        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-gray-200"
+                      >
+                    </div>
+                    <div>
+                      <label for="parent_email" class="block text-gray-700 font-medium mb-2">Email</label>
+                      <input
+                        type="email"
+                        id="parent_email"
+                        name="parent_email"
+                        value="{{ parent_email }}"
+                        placeholder="Add Your Email"
                         class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-gray-200"
                       >
                     </div>
